--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>city</title>
-
+  <script src="<%= BASE_URL %>flexible.js"></script>
 </head>
 
 <body>
